# telos-lang

./: .gitignore  README.md  RELEASE_NOTES.md  THREAT_MODEL.md  demo_1_ifc.sh  demo_2_z3.sh  demo_3_bpf.sh
.github/workflows/: ci.yml
telosc/: Cargo.toml  bpf_disasm.txt  elf_dump.txt  hello_http.telos
telosc/src/: main.rs  parser.rs  typecheck.rs
telosc/src/codegen/: aarm_crypto.rs  bootstrap.rs  bpf.rs  host.rs  mod.rs  pipelock.rs  verify_smt.rs  xdp.rs
telosc/src/heki/: mod.rs  telos_npt.rs
telosc/tests/: cli_test.rs  declassify_fail.telos  declassify_pass.telos  e2e_policy.telos  hello_world.telos  ifc_fail.telos  ifc_implicit.telos  intent_syntax.telos  loops_fail.telos  loops_pass.telos  pipelock_sync.telos
